// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Communities community create 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "admins": Array [
    Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "imnew",
      "communityId": "[SANITIZED]",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "alice",
        "image": "https://hips.hearstapps.com/elleuk.cdnds.net/15/37/2048x2730/2048x2730-e6-8278-458c32fb7c74-assets-elleuk-com-gallery-17063-taylor-swift-hairstyle-bob-getty-gallery-01-jpg.jpg",
        "name": "Alice",
      },
      "invites": 0,
      "pagerank": 0,
      "pagerankNeg": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "postDegree": 0,
      "relevanceRecord": Array [],
      "reputation": 0,
      "role": "admin",
      "superAdmin": true,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "a00000000000000000000000",
    },
  ],
  "avgTwitterScore": 0,
  "betEnabled": true,
  "channels": Array [],
  "createdAt": "[SANITIZED]",
  "currentPosts": 0,
  "currentShares": 0,
  "danglingConsumer": 0,
  "defaultPost": "link",
  "description": "Discussion of blockchain tech and ecosystem",
  "hidden": false,
  "id": "[SANITIZED]",
  "image": "",
  "lastRewardFundUpdate": "[SANITIZED]",
  "memberCount": 2,
  "name": "New Community",
  "negConsumer": 0,
  "postCount": 0,
  "private": false,
  "rewardFund": 0,
  "slug": "imnew",
  "superAdmins": Array [
    Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "imnew",
      "communityId": "[SANITIZED]",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "alice",
        "image": "https://hips.hearstapps.com/elleuk.cdnds.net/15/37/2048x2730/2048x2730-e6-8278-458c32fb7c74-assets-elleuk-com-gallery-17063-taylor-swift-hairstyle-bob-getty-gallery-01-jpg.jpg",
        "name": "Alice",
      },
      "invites": 0,
      "pagerank": 0,
      "pagerankNeg": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "postDegree": 0,
      "relevanceRecord": Array [],
      "reputation": 0,
      "role": "admin",
      "superAdmin": true,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "a00000000000000000000000",
    },
    Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "imnew",
      "communityId": "[SANITIZED]",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "bob",
        "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
        "name": "Bob",
      },
      "invites": 0,
      "pagerank": 0,
      "pagerankNeg": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "postDegree": 0,
      "relevanceRecord": Array [],
      "reputation": 0,
      "role": "admin",
      "superAdmin": true,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "b00000000000000000000000",
    },
  ],
  "topPostShares": 0,
  "topics": Array [
    "co community topic",
  ],
  "twitterCount": 0,
  "updatedAt": "[SANITIZED]",
}
`;

exports[`Communities community join 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "community": "imnew",
  "communityId": "[SANITIZED]",
  "createdAt": "[SANITIZED]",
  "degree": 0,
  "deletedCommunity": false,
  "embeddedUser": Object {
    "_id": "[SANITIZED]",
    "handle": "carol",
    "image": "https://ichef.bbci.co.uk/news/640/cpsprodpb/A369/production/_87133814_87135704.jpg",
    "name": "Carol",
  },
  "invites": 0,
  "pagerank": 0,
  "pagerankNeg": 0,
  "pagerankRaw": 0,
  "pagerankRawNeg": 0,
  "postDegree": 0,
  "relevanceRecord": Array [],
  "reputation": 0,
  "role": "user",
  "superAdmin": false,
  "unread": 0,
  "updatedAt": "[SANITIZED]",
  "user": "c00000000000000000000000",
}
`;

exports[`Communities community should update 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "admins": Array [
    Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "imnew",
      "communityId": "[SANITIZED]",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "alice",
        "image": "https://hips.hearstapps.com/elleuk.cdnds.net/15/37/2048x2730/2048x2730-e6-8278-458c32fb7c74-assets-elleuk-com-gallery-17063-taylor-swift-hairstyle-bob-getty-gallery-01-jpg.jpg",
        "name": "Alice",
      },
      "invites": 0,
      "pagerank": 0,
      "pagerankNeg": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "postDegree": 0,
      "relevanceRecord": Array [],
      "reputation": 0,
      "role": "admin",
      "superAdmin": false,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "a00000000000000000000000",
    },
  ],
  "avgTwitterScore": 0,
  "channels": Array [],
  "createdAt": "[SANITIZED]",
  "currentPosts": 0,
  "currentShares": 0,
  "danglingConsumer": 0,
  "description": "Discussion of blockchain tech and ecosystem",
  "id": "[SANITIZED]",
  "image": "",
  "lastRewardFundUpdate": "[SANITIZED]",
  "memberCount": 3,
  "name": "New Community",
  "negConsumer": 0,
  "postCount": 0,
  "rewardFund": 0,
  "slug": "imnew",
  "superAdmins": Array [
    Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "imnew",
      "communityId": "[SANITIZED]",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "carol",
        "image": "https://ichef.bbci.co.uk/news/640/cpsprodpb/A369/production/_87133814_87135704.jpg",
        "name": "Carol",
      },
      "invites": 0,
      "pagerank": 0,
      "pagerankNeg": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "postDegree": 0,
      "relevanceRecord": Array [],
      "reputation": 0,
      "role": "user",
      "superAdmin": true,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "c00000000000000000000000",
    },
  ],
  "topPostShares": 0,
  "topics": Array [
    "co community topic",
  ],
  "twitterCount": 0,
  "updatedAt": "[SANITIZED]",
}
`;
